--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: Build image
 
 on:
+  push:
+    tags:
+      - "v*"
   pull_request:
 
 env:
@@ -19,11 +22,9 @@ jobs:
         platform:
           - linux/amd64
           - linux/arm64
-
-          # https://github.com/rust-lang/docker-rust/issues/142
-          # - linux/386
-          # - linux/arm/v7
-          # - linux/arm/v6
+          - linux/386
+          - linux/arm/v7
+          - linux/arm/v6
     steps:
       - name: Prepare
         run: |
@@ -31,7 +32,7 @@ jobs:
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
       - name: Load .env file
         uses: xom9ikk/dotenv@v2
 
@@ -52,7 +53,7 @@ jobs:
 
       - name: Build and push by digest
         id: build
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           push: ${{ github.event_name != 'pull_request' }}
           platforms: ${{ matrix.platform }}
@@ -63,6 +64,7 @@ jobs:
             ARTI_VERSION=${{ env.ARTI_VERSION }}
             OBFS4_VERSION=${{ env.OBFS4_VERSION }}
             SNOWFLAKE_VERSION=${{ env.SNOWFLAKE_VERSION }}
+            WEBTUNNEL_VERSION=${{ env.WEBTUNNEL_VERSION }}
 
       - name: Export digest
         run: |
@@ -116,3 +118,10 @@ jobs:
       - name: Inspect image
         run: |
           docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
+
+      - name: Docker Hub Description
+        uses: peter-evans/dockerhub-description@v4
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: ${{ secrets.DOCKERHUB_USERNAME }}/arti
