feat: add webtunnel

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 ARTI_VERSION=arti-v1.2.0
 OBFS4_VERSION=obfs4proxy-0.0.14
 SNOWFLAKE_VERSION=v2.9.1
+WEBTUNNEL_VERSION=399c24557a186fcb8ca079f6be38d9cba5fa8ec5
