--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,20 +15,15 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        platform:
-          - linux/amd64
-          - linux/arm64
-          - linux/386
-          - linux/arm/v7
-          - linux/arm/v6
+        os: [ubuntu-latest, ubuntu-24.04-arm]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Prepare
         run: |
-          platform=${{ matrix.platform }}
+          platform=${{ matrix.os == 'ubuntu-latest' && 'linux/amd64' || 'linux/arm64' }}
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
 
       - name: Checkout
