feat: webtunnel use tag

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 ARTI_VERSION=arti-v1.8.0
 OBFS4_VERSION=obfs4proxy-0.0.14
 SNOWFLAKE_VERSION=v2.11.0
-WEBTUNNEL_VERSION=40122dcb21d237940537aa2d20c81a30fb91a375
+WEBTUNNEL_VERSION=v0.0.3
